--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -12,16 +12,17 @@
     <ImageView
         android:id="@+id/ivLogo"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="150dp"
         app:srcCompat="@drawable/paws4adoption_logo"
         android:textColor="@color/design_default_color_background"/>
+
+
 
     <TextView
         android:id="@+id/tvUsername"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="8dp"
-        android:text="email@text.com"
-        android:textColor="@color/design_default_color_background" />
+        android:text=""
+        android:textColor="@android:color/white"/>
 
 </LinearLayout>
