--- a/app/src/main/res/layout/activity_post_animal.xml
+++ b/app/src/main/res/layout/activity_post_animal.xml
@@ -22,7 +22,6 @@ android:orientation="vertical">
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:layout_marginTop="10dp"
-            android:onClick="onTakePhoto_OnClick"
             android:padding="20dp"
             app:srcCompat="@drawable/ic_take_photo_foreground" />
 
@@ -111,8 +110,13 @@ android:orientation="vertical">
             android:layout_width="match_parent"
             android:layout_height="150dp"
             android:layout_marginTop="10dp"
-            android:onClick="onGetLocation_OnClick"
             app:srcCompat="@drawable/ic_get_location_foreground" />
+
+        <Button
+            android:id="@+id/btnLocation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Button" />
 
         <LinearLayout
             android:layout_width="match_parent"
