--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".SignupActivity">
+    tools:context=".views.SignupActivity">
 
     <Space
         android:layout_width="match_parent"
@@ -66,10 +66,10 @@
         android:layout_height="25dp" />
 
     <Button
-        android:id="@+id/btnRegistar"
+        android:id="@+id/btnContinuar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="@string/registar"
-        android:onClick="onClickSignup"/>
+        android:onClick="onClickContinuar"
+        android:text="@string/continuar" />
 </LinearLayout>
