--- a/app/src/main/res/layout/fragment_item_list_animals.xml
+++ b/app/src/main/res/layout/fragment_item_list_animals.xml
@@ -59,7 +59,7 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/textView6"
+                            android:id="@+id/textView_name"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
@@ -89,7 +89,7 @@
                             android:textStyle="bold" />
 
                         <TextView
-                            android:id="@+id/textView2"
+                            android:id="@+id/textView_breed"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
@@ -115,7 +115,7 @@
                             android:textStyle="bold" />
 
                         <TextView
-                            android:id="@+id/textView7"
+                            android:id="@+id/textView_size"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
@@ -126,6 +126,7 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:layout_marginBottom="35dp"
                         android:orientation="horizontal">
 
                         <TextView
@@ -139,14 +140,41 @@
                             android:textStyle="bold" />
 
                         <TextView
-                            android:id="@+id/textView4"
+                            android:id="@+id/textView_sex"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:text="Macho" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/textView8"
+                            android:layout_width="39dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="Colocado em:"
+                            android:textAlignment="viewStart"
+                            android:textColor="#1E1E1E"
+                            android:textSize="15sp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/textView_postDate"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="12/10/2020"
+                            android:textAlignment="viewStart" />
                     </LinearLayout>
 
                 </LinearLayout>
+
             </LinearLayout>
         </LinearLayout>
 
