--- a/app/src/main/res/layout/fragment_item_list_animals.xml
+++ b/app/src/main/res/layout/fragment_item_list_animals.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ItemListAnimals">
+    tools:context=".views.ItemListAnimals">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,7 +14,7 @@
         tools:visibility="visible">
 
         <TextView
-            android:id="@+id/textView5"
+            android:id="@+id/textView_type"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
@@ -126,7 +126,7 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_marginBottom="35dp"
+                        android:layout_marginBottom="20dp"
                         android:orientation="horizontal">
 
                         <TextView
@@ -151,26 +151,26 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:orientation="horizontal">
+                        android:orientation="vertical">
 
                         <TextView
                             android:id="@+id/textView8"
-                            android:layout_width="39dp"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:text="Colocado em:"
-                            android:textAlignment="viewStart"
+                            android:textAlignment="center"
                             android:textColor="#1E1E1E"
                             android:textSize="15sp"
                             android:textStyle="bold" />
 
                         <TextView
                             android:id="@+id/textView_postDate"
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:text="12/10/2020"
-                            android:textAlignment="viewStart" />
+                            android:textAlignment="center" />
                     </LinearLayout>
 
                 </LinearLayout>
