--- a/app/src/main/res/layout/fragment_list_adoption_animals.xml
+++ b/app/src/main/res/layout/fragment_list_adoption_animals.xml
@@ -3,10 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ListAdoptionAnimalsFragment">
+    tools:context=".views.ListAdoptionAnimalsFragment">
 
 
-        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/swipe">
