--- a/app/src/main/res/layout/activity_post_animal.xml
+++ b/app/src/main/res/layout/activity_post_animal.xml
@@ -1,174 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout
-xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-tools:context=".views.PostAnimalActivity"
-android:orientation="vertical">
-
-<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".views.PostAnimalActivity"
+    android:orientation="vertical">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <ImageView
-            android:id="@+id/ivPhoto"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:layout_marginTop="10dp"
-            android:padding="20dp"
-            app:srcCompat="@drawable/ic_take_photo_foreground" />
-
-        <Button
-            android:id="@+id/btnUpload"
-            android:layout_width="wrap_content"
-            android:layout_height="52dp"
-            android:layout_gravity="center"
-            android:clickable="false"
-            android:drawableLeft="@mipmap/ic_action_upload"
-            android:padding="10dp"
-            android:text=" Upload Imagem "
-            android:textColor="@android:color/white" />
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:padding="20dp"
-            android:layout_marginTop="10dp"
-            android:hint="@string/insert_name"
-            android:id="@+id/etName"/>
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:padding="20dp"
-            android:layout_marginTop="10dp"
-            android:hint="@string/id_chip"
-            android:id="@+id/etChipId"/>
-
-
-        <EditText
-            android:id="@+id/etDescription"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:layout_marginTop="10dp"
-            android:gravity="top|left"
-            android:hint="@string/description"
-            android:inputType="textMultiLine"
-            android:lines="8"
-            android:maxLines="10"
-            android:minLines="6"
-            android:padding="20dp" />
-
-        <Spinner
-            android:layout_marginTop="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="20dp"
-            android:id="@+id/spNature"
-            android:prompt="Selecione a espécie"/>
-
-        <Spinner
-            android:layout_marginTop="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="20dp"
-            android:id="@+id/spBreed"
-            android:prompt="Selecione a sub-espécie"/>
-
-        <Spinner
-            android:layout_marginTop="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="20dp"
-            android:id="@+id/spFurLenght"
-            android:prompt="Selecione o tipo de pêlo"/>
-
-        <Spinner
-            android:layout_marginTop="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="20dp"
-            android:id="@+id/spFurColor"
-            android:prompt="Selecione a côr do pêlo"/>
-
-        <Spinner
-            android:layout_marginTop="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="20dp"
-            android:id="@+id/spSize"
-            android:prompt="Selecione o porte"/>
-
-        <Spinner
-            android:layout_marginTop="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="20dp"
-            android:id="@+id/spSex"
-            android:prompt="Selecione o sexo"/>
-
-
-        <ImageView
-            android:id="@+id/ivLocation"
-            android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:layout_marginTop="10dp"
-            app:srcCompat="@drawable/ic_get_location_foreground" />
-
-        <Button
-            android:id="@+id/btnLocation"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Button" />
+        android:layout_height="match_parent">
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="50"
-                android:padding="20dp"
-                android:hint="-"
-                android:id="@+id/tvLat"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="50"
-                android:padding="20dp"
-                android:hint="-"
-                android:id="@+id/tvLong"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/llMissingAnimal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <EditText
+            <ImageView
+                android:id="@+id/ivPhoto"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="datetime"
-                android:padding="20dp"
+                android:layout_height="200dp"
                 android:layout_marginTop="10dp"
-                android:hint="@string/date"
-                android:id="@+id/etDate"/>
+                android:padding="20dp"
+                app:srcCompat="@drawable/ic_take_photo_foreground"
+                android:contentDescription="@string/animal_picture" />
 
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/llFoundAnimal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            <Button
+                android:id="@+id/btnUpload"
+                android:layout_width="wrap_content"
+                android:layout_height="52dp"
+                android:layout_gravity="center"
+                android:clickable="false"
+                android:drawableStart="@mipmap/ic_action_upload"
+                android:padding="10dp"
+                android:text="@string/upload_picture"
+                android:textColor="@android:color/white" />
 
             <EditText
                 android:layout_width="match_parent"
@@ -177,7 +44,8 @@ android:orientation="vertical">
                 android:padding="20dp"
                 android:layout_marginTop="10dp"
                 android:hint="@string/insert_name"
-                android:id="@+id/etName"/>
+                android:id="@+id/etName"
+                android:autofillHints="no"/>
 
             <EditText
                 android:layout_width="match_parent"
@@ -186,31 +54,154 @@ android:orientation="vertical">
                 android:padding="20dp"
                 android:layout_marginTop="10dp"
                 android:hint="@string/id_chip"
-                android:id="@+id/etChipId"/>
+                android:id="@+id/etChipId"
+                android:autofillHints="no"/>
+
+
+            <EditText
+                android:id="@+id/etDescription"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:layout_marginTop="10dp"
+                android:gravity="top|start"
+                android:hint="@string/description"
+                android:inputType="textMultiLine"
+                android:lines="8"
+                android:maxLines="10"
+                android:minLines="6"
+                android:padding="20dp"
+                android:autofillHints="no" />
 
             <Spinner
                 android:layout_marginTop="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="20dp"
-                android:id="@+id/spDistrict"
-                android:prompt="Selecione o distrito"/>
+                android:id="@+id/spNature" />
 
+            <Spinner
+                android:layout_marginTop="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="20dp"
+                android:id="@+id/spBreed" />
+
+            <Spinner
+                android:layout_marginTop="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="20dp"
+                android:id="@+id/spFurLenght" />
+
+            <Spinner
+                android:layout_marginTop="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="20dp"
+                android:id="@+id/spFurColor"/>
+
+            <Spinner
+                android:layout_marginTop="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="20dp"
+                android:id="@+id/spSize" />
+
+            <Spinner
+                android:layout_marginTop="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="20dp"
+                android:id="@+id/spSex" />
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/etMissingFoundDate"
+                android:inputType="date"
+                android:padding="20dp"
+                android:layout_marginTop="10dp"
+                android:importantForAutofill="no" />
+
+            <ImageView
+                android:id="@+id/ivLocation"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:layout_marginTop="10dp"
+                app:srcCompat="@drawable/ic_get_location_foreground"
+                android:contentDescription="@string/location_simbol_image" />
+
+            <Button
+                android:id="@+id/btnLocation"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/set_location" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="50"
+                    android:padding="20dp"
+                    android:hint="@string/dash"
+                    android:id="@+id/tvLat"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="50"
+                    android:padding="20dp"
+                    android:hint="@string/dash"
+                    android:id="@+id/tvLong"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/llFoundAnimal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPersonName"
+                    android:padding="20dp"
+                    android:layout_marginTop="10dp"
+                    android:hint="@string/street"
+                    android:id="@+id/etLocationStreet"
+                    android:autofillHints="no" />
+
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPersonName"
+                    android:padding="20dp"
+                    android:layout_marginTop="10dp"
+                    android:hint="loca"
+                    android:id="@+id/etLocationCity"
+                    android:autofillHints="no" />
+
+                <Spinner
+                    android:layout_marginTop="10dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="20dp"
+                    android:id="@+id/spLocationDistrict" />
+
+
+            </LinearLayout>
 
         </LinearLayout>
 
-    </LinearLayout>
+    </ScrollView>
 
-</ScrollView>
-
-<com.google.android.material.floatingactionbutton.FloatingActionButton
-    android:id="@+id/fabSubmit"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_gravity="bottom|end"
-    android:layout_margin="10dp"
-    android:clickable="true"
-    android:src="@mipmap/ic_submit_round"
-    android:focusable="true"
-    android:contentDescription="@string/submit" />
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabSubmit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="10dp"
+        android:clickable="true"
+        android:src="@mipmap/ic_submit_round"
+        android:focusable="true"
+        android:contentDescription="@string/submit" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
