--- a/app/src/main/res/layout/activity_post_animal.xml
+++ b/app/src/main/res/layout/activity_post_animal.xml
@@ -151,6 +151,13 @@
                     android:padding="20dp"
                     android:hint="@string/dash"
                     android:id="@+id/tvLong"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="50"
+                    android:padding="20dp"
+                    android:hint="@string/dash"
+                    android:id="@+id/tvAddress"/>
 
             </LinearLayout>
 
