User signup is done

--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -72,8 +72,7 @@
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:hint="NIF"
-                    android:inputType="textPersonName"
-                    android:text="Name" />
+                    android:inputType="textPersonName" />
 
                 <EditText
                     android:id="@+id/etPhone"
